# CanteenSystem

./: AddDish.c  AddDish.cpp  AddToSum.c  AddToSum.cpp  BillDetail.cpp  CMakeLists.txt  CanteenSystem.c  CanteenSystem.cpp  ClearBill.cpp  CookManagement.cpp  CustomerMode.c  CustomerMode.cpp  DeleteDish.c  DeleteDish.cpp  EditDishInfo.c  EditDishInfo.cpp  Functions.h  IdentityVerification.cpp  ManagerMode.c  ManagerMode.cpp  Order.c  Order.cpp  README.md  ReadMenu.c  ReadMenu.cpp  SearchDish.c  SearchDish.cpp  Sync.cpp  SyncToDish.c  SyncToDish.cpp  TableFeedback.c  TableFeedback.cpp  TakeOutFeedback.c  TakeOutFeedback.cpp  TimeTransform.cpp  WriteToBills.c  WriteToBills.cpp  print_table.c  print_table.cpp  print_table.h
